Improve appearance of disabled buttons, explicily put header in front of content to fix shadow in some situations, prefer overflow:clip for previews

--- a/frontend/src/components/common/Header.css
+++ b/frontend/src/components/common/Header.css
@@ -4,6 +4,7 @@
   box-shadow: 0 4px 3px -5px var(--shadow-2);
   background: var(--header-back);
   text-align: left;
+  z-index: 1;
 
   .back {
     order: -1;
